--- a/index.html
+++ b/index.html
@@ -136,14 +136,6 @@
                     Hi, I am Kristijan Kenđel, Frontend developer. Currently working as Angular
                     developer in Zagreb/Croatia
                   </p>
-                  <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-                  </p>
-                  <p class="lead">
-                    Reading books about investing . . . .
-                  </p>
                 </div>
               </div>
             </div>
@@ -176,9 +168,7 @@
               <h2 class="s-title">Matrica Company</h2>
               <p class="date">Nov 2020 - Present</p>
               <p class="s-description text-center">
-                Working on Angular Bussiness apps
-                Resolving bugs on both frontend and backend
-                .............................
+                Angular 8+ | SQL | C#
               </p>
             </div>
           </div>
@@ -192,9 +182,7 @@
               <h2 class="s-title">UniqCast</h2>
               <p class="date">Mar 2020 - Nov 2020</p>
               <p class="s-description text-center">
-                Frontend junior developer
-                Making custom components for video player (Angular)
-                Working on CRUD Angular Apps
+                Angular 8+ | Protractor
               </p>
             </div>
           </div>
@@ -280,7 +268,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Chat App</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Angular 10 | C# | SQL</span> / <span class="w-date">Jan 2021</span>
+                      <span class="w-ctegory">Angular 10 | C# | SQL | SignalR</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -304,55 +292,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Book Rent App</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Angular 9 | JSON-Server</span> / <span class="w-date">Nov 2020</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/tutorial.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/tutorial.png" alt="tutorial" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">JavaScript tutorial</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">HTML | CSS | JavaScript</span> / <span class="w-date">Dec 2020</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/forecaster.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/forecaster.png" alt="forecaster" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Task for job interview</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">HTML | CSS | JavaScript</span> / <span class="w-date">Feb 2020</span>
+                      <span class="w-ctegory">Angular 9 | JSON-Server</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
