Adding download for download CV

--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
                     <li>SQL Server Management Studio</li>
                     <li>GIT</li>
                   </ul>
-
-
                 </div>
               </div>
               <div class="col-md-6">
@@ -130,6 +128,7 @@
                     <h5 class="title-left">
                       About me
                     </h5>
+                    <a href="./cv/Kristijan Kendel - CV.pdf" class="download-button" download>Download CV</a>
                   </div>
                   <p class="lead">
                     Hi, I am Kristijan Kenđel, Frontend developer. Currently working as Angular
